--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cosine_atomic)
 export(get_hash_matrix)
 export(get_minhash_matrix)
 export(get_neighbors)
+export(get_s_curve)
 export(get_signature_matrix)
 export(get_similar_pairs)
 export(hashfun_1)
@@ -16,4 +17,8 @@ import(Matrix)
 import(data.table)
 import(magrittr)
 importFrom(Rcpp,evalCpp)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_color_discrete)
 useDynLib(LSHR)
