--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,19 @@
 Package: LSHR
 Type: Package
 Title: Locality Sensitive Hashing In R
-Version: 0.1.2
-Date: 2016-01-02
+Version: 0.2.0
+Date: 2017-03-08
 Authors@R: person("Dmitriy", "Selivanov", role = c("aut", "cre"),
     email = "selivanov.dmitriy@gmail.com")
 Maintainer: Dmitriy Selivanov <selivanov.dmitriy@gmail.com>
 Description: Fast and memory efficient duplicate-detection and near-neighbor
-    search in high-dimensional data.
+    search in high-dimensional data. 
+    Only Cosine and Jaccard distances supported at the moment
 License: MIT + file LICENSE
 URL: https://github.com/dselivanov/LSHR
 BugReports: https://github.com/dselivanov/LSHR/issues
 VignetteBuilder: knitr
-SystemRequirements: C++11,
+SystemRequirements: C++11
 Depends:
     Matrix
 Imports:
@@ -25,5 +26,5 @@ Imports:
 LinkingTo: Rcpp
 Suggests:
     roxygen2,
-    knitr,
+    knitr
 RoxygenNote: 5.0.1
