--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: person("Dmitriy", "Selivanov", role = c("aut", "cre"),
 Maintainer: Dmitriy Selivanov <selivanov.dmitriy@gmail.com>
 Description: Fast and memory efficient duplicate-detection and near-neighbor
     search in high-dimensional data. Only Cosine and Jaccard distances supported at the moment.
-License: MIT + file LICENSE
+License: GPL (>= 2) | file LICENSE
 URL: https://github.com/dselivanov/LSHR
 BugReports: https://github.com/dselivanov/LSHR/issues
 VignetteBuilder: knitr
