--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(get_similar_pairs)
 export(get_similar_pairs_cosine)
 import(Matrix)
 import(data.table)
+import(futile.logger)
 import(magrittr)
 import(methods)
 importFrom(Rcpp,evalCpp)
