initial support for 64-bit signatures in random projections - related to #12. Specialized 32-bit  implementation to be explored.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,10 @@ BugReports: https://github.com/dselivanov/LSHR/issues
 VignetteBuilder: knitr
 SystemRequirements: C++11
 Depends:
-    Matrix,
     methods
 Imports:
+    Matrix,
+    bit64,
     data.table(>= 1.9.10),
     magrittr (>= 1.5),
     Rcpp (>= 0.10.3),
