--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ import(futile.logger)
 import(magrittr)
 import(methods)
 importFrom(Rcpp,evalCpp)
+importFrom(bit64,integer64)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
